@@ -340,8 +340,8 @@ tut_mode_tl_byproduct=Left-click: Add recipe
 tut_mode_production_toggle=Left-click: Toggle production\nAlt-left-click: Toggle all other production
 tut_mode_producing_recipe=Left-click: Open subfloor\nControl-right-click: Delete\nShift-left-click: Move down\nControl-left-click: Move up\nShift-alt-left-click: Move to the bottom\nControl-alt-left-click: Move to the top
 tut_mode_consuming_recipe=Control-right-click: Delete\nShift-left-click: Move down\nControl-left-click: Move up\nShift-alt-left-click: Move to the bottom\nControl-alt-left-click: Move to the top
-tut_mode_machine=Left-click: Change machine\nRight-click: Set limit\nShift-left-click: Upgrade\nControl-left-click: Downgrade\nAlt-left-click: Put into cursor\nAlt-right-click: Reset to default
-tut_mode_machine_matrix=Left-click: Change machine\nShift-left-click: Upgrade\nControl-left-click: Downgrade\nAlt-left-click: Put into cursor\nAlt-right-click: Reset to default
+tut_mode_machine=Left-click: Change machine\nRight-click: Set limit\nShift-left-click: Upgrade\nControl-left-click: Downgrade\nControl-right-click: Reset to default\nAlt-left-click: Put into cursor
+tut_mode_machine_matrix=Left-click: Change machine\nShift-left-click: Upgrade\nControl-left-click: Downgrade\nControl-right-click: Reset to default\nAlt-left-click: Put into cursor
 tut_mode_beacon=Left/Right-click: Edit\nControl-right-click: Delete\nAlt-left-click: Put into cursor
 tut_mode_module=Left/Right-click: Edit\nControl-right-click: Delete
 tut_mode_product=Left-click: Prioritize\nRight-click: Specify amount
